--- a/_data/locales/de-DE.yml
+++ b/_data/locales/de-DE.yml
@@ -40,39 +40,39 @@ copyright:
     Except where otherwise noted, the blog posts on this site are licensed
     under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
-meta: #Powered by :PLATFORM with :THEME theme.
+meta: Powered by :PLATFORM with :THEME theme.
 
 not_found:
   statment: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
   hint_template: :HEAD_BAK to try finding it again, or search for it on the :ARCHIVES_PAGE.
   head_back: Head back Home
-  archives_page: Archives page
+  archives_page: Seite Archivieren
 
 # ----- Posts related labels -----
 
 post:
-  written_by: By
-  posted: Posted
-  updated: Updated
-  words: words
-  pageview_measure: views
+  written_by: von
+  posted: Erstellt
+  updated: Aktualisiert
+  words: Wörter
+  pageview_measure: Ansichten
   read_time:
     unit: min
-    prompt: read
-  relate_posts: Further Reading
-  share: Share
+    prompt: lesen
+  relate_posts: Weiter lesen
+  share: Teilen
   button:
-    next: Newer
-    previous: Older
+    next: Neuer
+    previous: ÄlterOlder
     copy_code:
-      succeed: Copied!
+      succeed: Kopiert!
     share_link:
-      title: Copy link
-      succeed: Link copied successfully!
+      title: Link Kopieren
+      succeed: Link erfolgreich kopiert!
   # pinned prompt of posts list on homepage
   pin_prompt: Pinned
 
 # categories page
 categories:
-  category_measure: categories
-  post_measure: posts
+  category_measure: Kategorien
+  post_measure: Posts
